--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"tailwind-merge": "^3.3.1",
-		"zustand": "^5.0.8"
+		"zustand": "^5.0.8",
+		"kysely": "^0.28.5",
+		"pg": "^8.16.3",
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
+		"@types/pg": "^8.15.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
