--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@orpc/client": "^1.8.6",
+		"@orpc/server": "^1.8.6",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^17.2.2",
+		"joi": "^18.0.1",
+		"kysely": "^0.28.5",
 		"lucide-react": "^0.536.0",
 		"next": "15.4.5",
+		"pg": "^8.16.3",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"tailwind-merge": "^3.3.1",
-		"zustand": "^5.0.8",
-		"kysely": "^0.28.5",
-		"pg": "^8.16.3"
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
@@ -31,6 +35,7 @@
 		"@types/pg": "^8.15.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"kysely-ctl": "^0.19.0",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.3.6",
 		"typescript": "^5"
