--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@auth/core": "^0.34.2",
+		"@auth/kysely-adapter": "^1.10.0",
 		"@orpc/client": "^1.8.6",
 		"@orpc/server": "^1.8.6",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"bcrypt": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.2",
 		"joi": "^18.0.1",
-		"kysely": "^0.28.5",
+		"kysely": "^0.27.5",
 		"lucide-react": "^0.536.0",
 		"next": "15.4.5",
+		"next-auth": "^4.24.11",
 		"pg": "^8.16.3",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
@@ -31,6 +35,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
 		"@tailwindcss/postcss": "^4",
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^20",
 		"@types/pg": "^8.15.5",
 		"@types/react": "^19",
