--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"tailwind-merge": "^3.3.1",
-		"zustand": "^5.0.8"
+		"zustand": "^5.0.8",
+		"typescript": "^5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
@@ -42,7 +43,6 @@
 		"@types/react-dom": "^19",
 		"kysely-ctl": "^0.19.0",
 		"tailwindcss": "^4",
-		"tw-animate-css": "^1.3.6",
-		"typescript": "^5"
+		"tw-animate-css": "^1.3.6"
 	}
 }
