--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "cards-gpmecatronica",
 	"version": "0.1.0",
 	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
+    "scripts": {
+        "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
