--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "gpm-cards",
 	"version": "0.1.0",
 	"private": true,
-    "scripts": {
-        "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
+	"scripts": {
+		"dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -16,11 +16,13 @@
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-slot": "^1.2.4",
 		"bcrypt": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.2",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
 		"joi": "^18.0.1",
 		"kysely": "^0.27.5",
 		"lucide-react": "^0.536.0",
@@ -30,8 +32,8 @@
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"tailwind-merge": "^3.3.1",
-		"zustand": "^5.0.8",
-		"typescript": "^5"
+		"typescript": "^5",
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
