Atualização de dependencias

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
 		"joi": "^18.0.1",
 		"kysely": "^0.27.5",
 		"lucide-react": "^0.536.0",
-		"next": "15.4.5",
+		"next": "^16.0.8",
 		"next-auth": "^4.24.11",
 		"pg": "^8.16.3",
-		"react": "19.1.0",
-		"react-dom": "19.1.0",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
 		"tailwind-merge": "^3.3.1",
 		"typescript": "^5",
 		"zustand": "^5.0.8"
